--- a/Parcial_3/docker-compose.yaml
+++ b/Parcial_3/docker-compose.yaml
@@ -4,23 +4,33 @@ services:
   db:
     image: postgres:13
     environment:
-      POSTGRES_DB: 
-      POSTGRES_USER: 
-      POSTGRES_PASSWORD:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
     ports:
-      - "5432:5432"
+      - "${POSTGRES_PORT}:5432"
     volumes:
       - db-data:/var/lib/postgresql/data
     env_file:
       - ./datasabe/.env
 
 
-  api: 
-    build: api
-    env_file:
-      - ./api/.env
+  api:
+    build: .
+    container_name: parcial_api
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_HOST=${POSTGRES_HOST}
+      - POSTGRES_PORT=${POSTGRES_PORT}
+      - JWT_SECRET=${JWT_SECRET}
     ports:
-      - 8081:8080
+      - "3000:3000"
+    depends_on:
+      - db
+      - ./api/.env
+
 
 volumes:
   db-data:
