Cambios en el docker

--- a/Proyecto_Final/Codigo/api/Dockerfile
+++ b/Proyecto_Final/Codigo/api/Dockerfile
@@ -1,10 +1,10 @@
 FROM node:14
 
-# Definimos el directorio de trabajo en el contenedor
 WORKDIR /app
-
-COPY . .
+COPY ./api/package*.json ./  
+COPY ./server.js ./ 
+COPY ./api ./api
 RUN npm install
 EXPOSE 3000
 
-CMD ["npm", "run", "start"]
+CMD ["node", "server.js"]
