--- a/Proyecto_Final/Codigo/app/Dockerfile
+++ b/Proyecto_Final/Codigo/app/Dockerfile
@@ -1,10 +1,9 @@
 FROM node:14
 
 WORKDIR /app
-COPY ./api/package*.json ./  
-COPY ./server.js ./ 
-COPY ./api ./api
+COPY ./package*.json ./
 RUN npm install
+COPY . . 
 EXPOSE 3000
 
 CMD ["node", "server.js"]
