--- a/Proyecto_Final/Codigo/docker-compose.yaml
+++ b/Proyecto_Final/Codigo/docker-compose.yaml
@@ -1,16 +1,12 @@
 services:
   db:
     image: postgres:latest
-    environment:
-      POSTGRES_USER: ${DB_USER}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_DB: ${DB_NAME}
     ports:
       - "5433:5432"
     volumes:
       - pg_data:/var/lib/postgresql/data
     env_file:
-      - ./.env
+      - ./database/.env
 
   app:
     build:
@@ -19,19 +15,12 @@ services:
     container_name: my_app
     depends_on:
       - db
-    environment:
-      DB_HOST: db
-      DB_PORT: 5432
-      DB_USER: ${DB_USER}
-      DB_PASSWORD: ${DB_PASSWORD}
-      DB_NAME: ${DB_NAME}
-      API_KEY: ${API_KEY}
     ports:
       - "3000:3000"
     #volumes:
      # - .:/app
     env_file:
-      - ./.env
+      - ./api/.env
 
 volumes:
   pg_data:
